static/style.css
/* ... */
.logo a {
    text-decoration: none;
    color: #163F53;
    font-weight: bold;
    font-family: "Poppins", sans-serif;
    font-size: 35px;
}

.logo img {
    height: 48px;
}

.sidenav {
    height: 100vh;
    position: sticky;
    left: 0;
    top: 0;
    text-decoration: none;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: rgb(255, 255, 255);
    box-shadow: 4px 0 8px rgba(0, 0, 0, 0.1);
    padding-right: 10vw;
    font-size: 20px;
}

.sidenav a {
    text-decoration: none;
    color: black;
    margin-left: 30px;
    margin-bottom: 20px;
    display: flex;
    align-items: center;
}

.navicons {
    height: 35px;
    width: 35px;
}

.PageBanner {
    padding: 20px;
    width: 100%;
    background-color: #2B617D;
    font-weight: 600; /* Mila: Semi-bold*/
    color: white;
    font-size: 30px;
}

/* ======================== Home Page ==================================*/

.greeting {
    font-size: 30px;
    font-weight: 500;
}

.usageContainer {
    background: white;
    border-radius: 15px;
    padding: 20px;
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

.usageContainerFlex {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
}

.usageCard {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.percentPosture {
    font-size: 30px;
    color: #46C261;
}

.usageSmallText{
    font-size: 12px;
}

.usageBoldText {
    font-weight: bold;
}

.temperatureBoldText {
    font-weight: bold;
}

/* =========================== Info Page ==============================*/

.informationContainer{
    width: 100%;
}

.infoCardsContainer{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    margin-left: 35px;
}

.infoCardsContainer a {
    text-decoration: none;
    color: black;
}

.infoCards {
    font-size: 22px;
    font-weight: 400;
    margin: 40px;
}

.infoCards img {
    height: 200px;
    border-radius: 25px;
}

/* =========================== Article Pages ==============================*/

/* .articleBanner {

} */

.articleBanner img {
    width: 100%;
    height: 300px;
    max-height: 200px;
    object-fit: cover;
}

.articleContainer {
    margin: 20px;
    font-size: 20px;
}

.articleContainer p {
    color: #1a4f67;
}

.marginContainer h1 {
    color: #1e3e4f;
}

.articleContainer h1, 
.articleContainer h2, 
.articleContainer h3, 
.articleContainer h4, 
.articleContainer h5, 
.articleContainer h6,
.articleContainer strong,
.articleContainer li {
    color: #1e3e4f;
}

.articleContainer h2 {
    margin-top: 40px;
}

.flexArticle {
    display: flex;
    gap: 20px;
}

.twoColumn {
    flex: 1;
    box-sizing: border-box;
}

.twoColumn img {
    height: 45vh;
    align-items: right;
}

ul {
    list-style-type: disc;
    margin-left: 20px;
}
footer {
    text-align: center;
    font-size: 0.9rem;
    margin-top: 20px;
    color: #777;
}

/* ===================== Modal ====================== */

#calibrateModal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 400px;
    background-color: #f9f9f9;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
    border-radius: 8px;
    padding: 20px;
    z-index: 1000;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#calibrate-btn {
    background-color: #2B617D;
    color: white;
    border: none;
    padding: 10px 20px;
    font-size: 16px;
    font-weight: bold;
    border-radius: 5px;
    cursor: pointer;
    margin-bottom: 20px;
}

#calibrate-btn:hover {
    background-color: #19455b;
}

#modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 999;
}

/* ======================== Home Page Posture Chart ==============================*/

#homePagePostureChartContainer {
    width: 80%; 
    max-width: 355px; 
    height: 300px; 
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative; 
}

#homePagePostureChart {
    width: 100%;
    height: 100%;
    display: none; /* centered the penguin as no data showed blank canvas */
}

/* ======================== No Data Message ==============================*/

#noDataMessage {
    display: none; /* Keeps it hidden initially */
    border-radius: 10px;
    font-size: 16px;
    text-align: center;
    margin-top: 20px;
    display: flex; /* Flexbox for alignment */
    flex-direction: column; /* Stack content vertically */
    align-items: center; /* Horizontally center content */
    justify-content: center; /* Vertically center content, if needed */
    padding: 20px; /* Optional, for spacing around content */
}

#noDataMessage p {
    margin: 0;
    font-weight: bold;
    color: #666;
}

#noDataMessage img {
    width: 200px;
    height: auto;
    margin-top: 15px;
}


/* ===================== Responsiveness ====================== */

.bottomnav {
    display: none;
    height: 50px;
    width: 100%;
    position: sticky;
    bottom: 0;
    text-decoration: none;
    background-color: rgb(255, 255, 255);
    box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
    font-size: 20px;
}

.bottomnav a {
    text-decoration: none;
    color: black;
    margin-left: 20px;
    display: flex;
    align-items: center;
}

/* @media screen and (max-width: 1200px) {
    .logo img {
        height: 40px;
    }
} */
/* ... */

